2008-10-09 Samuel Abels <http://debain.org>

	* src/Exscript/Exscript.py, src/Exscript/TemplateRunner.py, exscript, 
	src/Exscript/Interpreter/stdlib/Sys/run.py: Major refactoring of the top
	level API objects to allow for executing scripts that do not open a remote 
	connection (future).

2008-10-08 Samuel Abels <http://debain.org>

	* src/Exscript/Interpreter/Extract.py: Fix the "into" keyword.
	* src/Exscript/Interpreter/stdlib/IPv4/in_network.py: Apply mask to both, 
	network and ip address.

2008-09-05 Samuel Abels <http://debain.org>

	* doc/, src/Exscript/Exscript.py: Add documentation.

2008-08-04 Samuel Abels <http://debain.org>

	* src/Exscript/Interpreter/*: Fix escaping in global scope.

2008-07-15 Samuel Abels <http://debain.org>

	* src/Exscript/Interpreter/stdlib/Connection/close.py: New stdlib function 
	"close".

2008-07-14 Samuel Abels <http://debain.org>

	* src/Exscript/Interpreter/stdlib/File/rm.py: New stdlib function "rm".

2008-07-11 Samuel Abels <http://debain.org>

	* src/Exscript/Interpreter/stdlib/Sys/tacacs_lock.py,
	src/Exscript/Interpreter/stdlib/Sys/tacacs_unlock.py: Fix: Were completely
	broken.
	* src/Exscript/Exscript.py: Remove debug info.

2008-07-08 Samuel Abels <http://debain.org>

	* src/Exscript/Interpreter/stdlib/Sys/run.py, tests/hop.exscript, 
	tests/subtemplate.exscript, tests/ls.exscript, exscript, 
	src/Exscript/Exscript.py, src/Exscript/Interpreter/Scope.py, 
	src/Exscript/Interpreter/stdlib/Connection/auto_authorize.py, 
	src/Exscript/Interpreter/stdlib/Sys/__init__.py, 
	src/Exscript/TerminalActions/Authenticate.py, 
	src/Exscript/TerminalActions/CommandScript.py: It is now possible to 
	start a new Job immediately even while the engine is already running and 
	after the queue has been filled. Added new stdlib function run() to 
	allow for doing just that from within an Exscript. Added sample Exscripts 
	that make use of the new functionality.

2008-07-02 Samuel Abels <http://debain.org>
